--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ fastapi==0.103.2
 google-auth==2.23.3
 h11==0.14.0
 idna==3.4
-kubernetes==28.0.0+snapshot
+kubernetes==28.1.0
 oauthlib==3.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -23,6 +23,6 @@ six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
-urllib3==2.0.6
+urllib3==1.26.17
 uvicorn==0.23.2
 websocket-client==1.6.4
