--- a/api/dockerfile
+++ b/api/dockerfile
@@ -38,3 +38,22 @@ RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /
 USER appuser
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+
+
+# Versione non enviroment
+# FROM python:3.11-slim
+
+# WORKDIR /app
+
+# # install dependencies
+# COPY requirements.txt /tmp/requirements.txt
+# RUN pip install --no-cache-dir -r /tmp/requirements.txt
+
+# # copy the code
+# COPY ./app /app
+
+# # using a non-root user
+# RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+# USER appuser
+
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
