--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,11 +10,10 @@ cachetools = "==5.3.1"
 certifi = "==2023.7.22"
 charset-normalizer = "==3.3.0"
 click = "==8.1.7"
-fastapi = "*"
+fastapi = "==0.104.0"
 google-auth = "==2.23.3"
 h11 = "==0.14.0"
 idna = "==3.4"
-kubernetes = "*"
 oauthlib = "==3.2.2"
 pyasn1 = "==0.5.0"
 pyasn1-modules = "==0.3.0"
@@ -30,8 +29,9 @@ sniffio = "==1.3.0"
 starlette = "==0.27.0"
 typing-extensions = "==4.8.0"
 urllib3 = "==2.0.6"
-uvicorn = "*"
+uvicorn = "==0.23.2"
 websocket-client = "==1.6.4"
+kubernetes = "==27.2.0"
 
 [dev-packages]
 
