--- a/api/deployment.yml
+++ b/api/deployment.yml
@@ -1,3 +1,37 @@
+---
+# Admin Role - used by the api to do whatever it wants inside the cluster
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cluster-admin
+rules:
+  - apiGroups: [""]
+    resources:
+      ["pods", "pods/log", "services", "namespaces", "deployments", "jobs"]
+    verbs: ["get", "watch", "list"]
+---
+# Referred by the deployment to use the admin role
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: fastapi-service-account
+
+---
+# RoleBinding - bind the admin role to the service account used by the api
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: admin-binding
+subjects:
+  - kind: ServiceAccount
+    name: fastapi-service-account
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,9 +48,10 @@ spec:
       labels:
         app: fastapi
     spec:
+      serviceAccountName: fastapi-service-account
       containers:
         - name: fastapi
-          image: api:latest
+          image: ipaa:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 80
