--- a/api/deployment.yml
+++ b/api/deployment.yml
@@ -39,7 +39,7 @@ metadata:
   labels:
     app: fastapi
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: fastapi
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: fastapi-service-account
       containers:
         - name: fastapi
-          image: ipaa:latest
+          image: api:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 80
@@ -71,12 +71,11 @@ spec:
       protocol: TCP
   selector:
     app: fastapi
-
----
+# ---
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
 # metadata:
-#   name: apiserver-ingress
+#   name: api-ingress
 #   annotations:
 #     nginx.ingress.kubernetes.io/rewrite-target: /
 # spec:
@@ -87,6 +86,6 @@ spec:
 #             pathType: Prefix
 #             backend:
 #               service:
-#                 name: fastapi-service
+#                 name: api-service
 #                 port:
-#                   number: 8000
+#                   number: 80
