--- a/api/deployment.yml
+++ b/api/deployment.yml
@@ -51,7 +51,7 @@ spec:
       serviceAccountName: fastapi-service-account
       containers:
         - name: fastapi
-          image: api:latest
+          image: api2:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 80
@@ -71,21 +71,3 @@ spec:
       protocol: TCP
   selector:
     app: fastapi
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: api-ingress
-#   annotations:
-#     nginx.ingress.kubernetes.io/rewrite-target: /
-# spec:
-#   rules:
-#     - http:
-#         paths:
-#           - path: /api
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: api-service
-#                 port:
-#                   number: 80
