--- a/api/deployment.yml
+++ b/api/deployment.yml
@@ -81,3 +81,20 @@ spec:
       protocol: TCP
   selector:
     app: fastapi
+---
+# Version for in-cluster communication
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-service-cluster
+  labels:
+    app: fastapi
+spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+  clusterIP: 10.96.0.100
+  selector:
+    app: fastapi
