--- a/deployment/ingress.yml
+++ b/deployment/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: api-ingress
+  name: apps-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -13,5 +13,12 @@ spec:
             backend:
               service:
                 name: api-service
+                port:
+                  number: 80
+          - path: /frontend
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-service
                 port:
                   number: 80
