--- a/frontend/deployment.yml
+++ b/frontend/deployment.yml
@@ -21,6 +21,9 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
+          envFrom:
+            - configMapRef:
+                name: internal-ips
           resources:
             limits:
               memory: "128Mi"
