--- a/deployment/ingress.yml
+++ b/deployment/ingress.yml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: apps-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  # annotations:
+  # kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
     - http:
