--- a/api/Pipfile
+++ b/api/Pipfile
@@ -18,7 +18,6 @@ oauthlib = "==3.2.2"
 pyasn1 = "==0.5.0"
 pyasn1-modules = "==0.3.0"
 pydantic = "==2.4.2"
-pydantic-core = "==2.10.1"
 python-dateutil = "==2.8.2"
 pyyaml = "==6.0.1"
 requests = "==2.31.0"
@@ -32,6 +31,7 @@ urllib3 = "==2.0.6"
 uvicorn = "==0.23.2"
 websocket-client = "==1.6.4"
 kubernetes = "==27.2.0"
+pika = "*"
 
 [dev-packages]
 
