--- a/deployment/rabbitmq.yml
+++ b/deployment/rabbitmq.yml
@@ -1,3 +1,5 @@
+# kubectl apply -f https://github.com/rabbitmq/cluster-operator/releases/latest/download/cluster-operator.yml
+
 apiVersion: rabbitmq.com/v1beta1
 kind: RabbitmqCluster
 metadata:
